rgw: data_sync_source_zones only contains 'exporting' zones

RGWRados spawns a RGWDataSyncProcessorThread for each zone in
data_sync_source_zones, but these threads would fail to initialize
with ENOTSUP, and RGWOp_DATALog_Status would crash calling into an
uninitialized RGWDataSyncStatusManager

Fixes: https://tracker.ceph.com/issues/44068

Signed-off-by: Casey Bodley <cbodley@redhat.com>